FIX: contrast (red -> grey)

--- a/material-theme-creator.scss
+++ b/material-theme-creator.scss
@@ -128,7 +128,7 @@ _________________________________________
   --hA200: 0.96;
   --hA400: 0.96;
   --hA700: 1;
-  
+
   --s50: 0.75;
   --s100: 0.8;
   --s200: 0.85;
@@ -157,9 +157,9 @@ _________________________________________
   --lA400: 0.45;
   --lA700: 0.4;
 
-  --light-h:0;
-  --light-s:0;
-  --light-l:100;
+  --light-h: 0;
+  --light-s: 0;
+  --light-l: 100;
 }
 
 @function create-theme-map($theme-name) {
@@ -231,8 +231,8 @@ _________________________________________
     contrast: (
       50:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s50)) * 100 + var(--s50) * var(#{$theme-l})) * 1%),
+          0,
+          0%,
           calc(
             ((((1 - var(--l50)) * 100 + var(--l50) * var(#{$theme-l})) * 1%) - var(#{$contrast-threshold}, 50%)) *
               (-100)
@@ -240,8 +240,8 @@ _________________________________________
         ),
       100:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s100)) * 100 + var(--s100) * var(#{$theme-s})) * 1%),
+          0,
+          0%,
           calc(
             ((((1 - var(--l100)) * 100 + var(--l100) * var(#{$theme-l})) * 1%) - var(#{$contrast-threshold}, 50%)) *
               (-100)
@@ -249,8 +249,8 @@ _________________________________________
         ),
       200:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s200)) * 100 + var(--s200) * var(#{$theme-s})) * 1%),
+          0,
+          0%,
           calc(
             ((((1 - var(--l200)) * 100 + var(--l200) * var(#{$theme-l})) * 1%) - var(#{$contrast-threshold}, 50%)) *
               (-100)
@@ -258,8 +258,8 @@ _________________________________________
         ),
       300:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s300)) * 100 + var(--s300) * var(#{$theme-s})) * 1%),
+          0,
+          0%,
           calc(
             ((((1 - var(--l300)) * 100 + var(--l300) * var(#{$theme-l})) * 1%) - var(#{$contrast-threshold}, 50%)) *
               (-100)
@@ -267,23 +267,18 @@ _________________________________________
         ),
       400:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s400)) * 100 + var(--s400) * var(#{$theme-s})) * 1%),
+          0,
+          0%,
           calc(
             ((((1 - var(--l400)) * 100 + var(--l400) * var(#{$theme-l})) * 1%) - var(#{$contrast-threshold}, 50%)) *
               (-100)
           )
         ),
-      500:
-        hsl(
-          var(#{$theme-h}),
-          calc(var(#{$theme-s}) * 1%),
-          calc(((var(#{$theme-l}) * 1%) - var(#{$contrast-threshold}, 50%)) * (-100))
-        ),
+      500: hsl(0, 0%, calc(((var(#{$theme-l}) * 1%) - var(#{$contrast-threshold}, 50%)) * (-100))),
       600:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s600)) * 100 + var(--s600) * var(#{$theme-s})) * 1%),
+          0,
+          0%,
           calc(
             (
                 (((1 - var(--l600)) * var(#{$theme-l}) * var(#{$theme-l}) / 100 + var(--l600) * var(#{$theme-l})) * 1%) -
@@ -293,8 +288,8 @@ _________________________________________
         ),
       700:
         hsl(
-          var(#{$theme-h}),
-          calc(((1 - var(--s700)) * 100 + var(--s700) * var(#{$theme-s})) * 1%),
+          0,
+          0%,
           calc(
             (
                 (((1 - var(--l700)) * var(#{$theme-l}) * var(#{$theme-l}) / 100 + var(--l700) * var(#{$theme-l})) * 1%) -
@@ -305,7 +300,7 @@ _________________________________________
       800:
         hsl(
           0,
-          100%,
+          0%,
           calc(
             (
                 (((1 - var(--l800)) * var(#{$theme-l}) * var(#{$theme-l}) / 100 + var(--l800) * var(#{$theme-l})) * 1%) -
@@ -316,7 +311,7 @@ _________________________________________
       900:
         hsl(
           0,
-          100%,
+          0%,
           calc(
             (
                 (((1 - var(--l900)) * var(#{$theme-l}) * var(#{$theme-l}) / 100 + var(--l900) * var(#{$theme-l})) * 1%) -
